[package]
name = "hello"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main" }
aya-log = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
hello-common = { path = "../hello-common", features=["user"] }
anyhow = "1.0.42"
ctrlc = "3.2"
simplelog = { version = "^0.11.0", features = ["paris"] }

structopt = { version = "0.3"}

[[bin]]
name = "hello"
path = "src/main.rs"
